--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,3 +24,13 @@ steps:
     pip install pytest pytest-azurepipelines
     pytest
   displayName: 'pytest'
+
+
+- task: Docker@2
+  displayName: "Build and Push Docker Image"
+  inputs:
+    command: 'buildAndPush'
+    containerRegistry: 'pythonazurepipeline'
+    repository: 'pythonazurerepo'
+    dockerfile: '**/Dockerfile'
+
