--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
   displayName: "Build and Push Docker Image"
   inputs:
     command: 'buildAndPush'
-    containerRegistry: 'pythonazurepipeline.azurecr.io'
+    containerRegistry: 'pythonazurepipeline'
     repository: 'pythonazurerepo'
     dockerfile: '**/Dockerfile'
 
