--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,11 +26,11 @@ steps:
   displayName: 'pytest'
   
 - script: |
-    - docker build -t pythonpractice:1.0 .
+    docker build -t pythonpractice:1.0 .
   displayName: 'Build Docker Image'
 
 - script: |
-    - docker run pythonpractice:1.0
+    docker run pythonpractice:1.0
   displayName: 'Test Docker Image'
 
   
