--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,6 @@ steps:
 
 - script: |
     docker run -d -p 5000:5000 pythonpractice:1.0
-  displayName: 'Test Docker Container'
+  displayName: 'Test Run Docker Container'
 
   
