--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,12 @@ steps:
     pytest
   displayName: 'pytest'
 
-- displayName: 'Build/Test Docker Container'
-  script: |
+- script: | 
     yarn global add wait-on
     docker build -t pythonpractice:1.0 .
     docker run -d -p 5000:5000 pythonpractice:1.0
-    wait-on http://localhost:50000
+    wait-on http://localhost:5000
+    docker stop pythonpractice:1.0
 
-
+  displayName: 'Build Docker Container'
   
