--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,16 +24,12 @@ steps:
     pip install pytest pytest-azurepipelines
     pytest
   displayName: 'pytest'
-
-- script: | 
-    yarn global add wait-on
-    docker build -t pythonpractice:1 .
+  
+- script: docker build -t pythonpractice:1.0 .
   displayName: 'Build Docker Container'
 
 - script: |
-    docker run -d -p 5000:5000 pythonpractice:1
-    wait-on http://localhost:5000
-    docker stop pythonpractice:1
-  displayName: 'Run Docker Container'
+    docker run -d -p 5000:5000 pythonpractice:1.0
+  displayName: 'Test Run Docker Container'
 
   
