--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,14 +25,12 @@ steps:
     pip install pytest pytest-azurepipelines
     pytest
   displayName: 'pytest'
-  
-- script: docker build -t pythonpractice:1.0 .
-  displayName: 'Build Docker Container'
 
 - script: |
+    docker build -t pythonpractice:1.0 .
     docker run -d -p 5000:5000 pythonpractice:1.0
     sleep 10
     wait-on http://localhost:5000
-  displayName: 'Test Run Docker Container'
+  displayName: 'Build/Test Docker Container'
 
   
