--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
 
 - task: Docker@2
   inputs:
-    containerRegistry: 'pythonacrpractice'
+    containerRegistry: 'pythonpractice'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
   displayName: 'PushDocker'
