edited displayName - docker@2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,6 @@ steps:
     repository: 'testrepo'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
-  displayName: 'PushDocker'
+  displayName: 'Build/Push Docker'
 
   
